# Geometry-Qt-OpenGL

./: .gitignore  CMakeLists.txt  README.md  frag.glsl  main.cpp  main.qml  qml.qrc  vert.glsl
include/: oglItem.h  oglTriangle.h  triangleRenderer.h
include/GeometryPlugin/: polygon.h  utils.h
include/OpenGlPlugin/: oglItem.h  triangleRenderer.h
src/: oglItem.cpp  oglTriangle.cpp  triangleRenderer.cpp
src/GeometryPlugin/: polygon.cpp  utils.cpp
src/OpenGlPlugin/: oglItem.cpp  triangleRenderer.cpp
test/: GeometryTests.cpp
